fix for iteration drag and drop bug, and some spacing issues.

--- a/scrumdo-web/media/css/project.css
+++ b/scrumdo-web/media/css/project.css
@@ -13,7 +13,7 @@
 
     max-width: 950px;
     margin-left: 50px;
-    margin-right: 180px;
+    margin-right: 200px;
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
